--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hapi/boom": "^9.0.0",
     "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "easytimer.js": "^4.1.1",
